--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="movie-container">
         <label>Pick a movie:</label>
         <select id="movie">
+            <option value="12">Batman: The Dark Knight ($12)</option>
             <option value="10">Avengers: Endgame ($10)</option>
-            <option value="12">Batman: Dark Knight ($12)</option>
             <option value="8">Soul ($8)</option>
             <option value="9">Inception ($9)</option>
         </select>
