--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <button id="mode" class="mode" title="dark / light mode"><img src="./icon/night-mode.png" alt="switch color" class="mode_img"></button>
+    
     <div class="movie-container">
         <label>Pick a movie:</label>
         <select id="movie">
