--- a/index.html
+++ b/index.html
@@ -40,64 +40,64 @@
         <div class="screen"></div>
 
         <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
+            <div class="seat">1</div>
+            <div class="seat">2</div>
+            <div class="seat">3</div>
+            <div class="seat">4</div>
+            <div class="seat">5</div>
+            <div class="seat">6</div>
+            <div class="seat">7</div>
+            <div class="seat">8</div>
         </div>
         <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
+            <div class="seat">9</div>
+            <div class="seat">10</div>
+            <div class="seat">11</div>
+            <div class="seat occupied">12</div>
+            <div class="seat occupied">13</div>
+            <div class="seat">14</div>
+            <div class="seat">15</div>
+            <div class="seat">16</div>
         </div>
         <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
+            <div class="seat">17</div>
+            <div class="seat">18</div>
+            <div class="seat">19</div>
+            <div class="seat">20</div>
+            <div class="seat">21</div>
+            <div class="seat">22</div>
+            <div class="seat occupied">23</div>
+            <div class="seat occupied">24</div>
         </div>
         <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
+            <div class="seat">25</div>
+            <div class="seat">26</div>
+            <div class="seat">27</div>
+            <div class="seat">28</div>
+            <div class="seat">29</div>
+            <div class="seat">30</div>
+            <div class="seat">31</div>
+            <div class="seat">32</div>
         </div>
         <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
+            <div class="seat">33</div>
+            <div class="seat">34</div>
+            <div class="seat">35</div>
+            <div class="seat occupied">36</div>
+            <div class="seat occupied">37</div>
+            <div class="seat">38</div>
+            <div class="seat">39</div>
+            <div class="seat">40</div>
         </div>
         <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat"></div>
+            <div class="seat">41</div>
+            <div class="seat">42</div>
+            <div class="seat">43</div>
+            <div class="seat">44</div>
+            <div class="seat occupied">45</div>
+            <div class="seat occupied">46</div>
+            <div class="seat occupied">47</div>
+            <div class="seat">48</div>
         </div>
     </div>
 
