--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </select>
     </div>
 
+    <div class="clearBtn" id="clearBtn"><button class="clearLS">X</button></div>
+
     <ul class="showcase">
         <li>
             <div class="seat"></div>
