--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,105 +10,120 @@
 </head>
 
 <body>
-    <button id="mode" class="mode" title="dark / light mode"><img src="./icon/night-mode.png" alt="switch color" class="mode_img"></button>
-    
-    <div class="movie-container">
-        <label>Pick a movie:</label>
-        <select id="movie">
-            <option value="12">Batman: The Dark Knight ($12)</option>
-            <option value="10">Avengers: Endgame ($10)</option>
-            <option value="8">Soul ($8)</option>
-            <option value="9">Inception ($9)</option>
-        </select>
-    </div>
+    <main>
+        <button id="mode" class="mode" title="dark / light mode"><img src="./icon/night-mode.png" alt="switch color"
+                class="mode_img"></button>
 
-    <div class="clearBtn" id="clearBtn"><button class="clearLS">X</button></div>
+        <div class="movie-container">
+            <label>Pick a movie:</label>
+            <select id="movie">
+                <option value="12">Batman: The Dark Knight ($12)</option>
+                <option value="10">Avengers: Endgame ($10)</option>
+                <option value="8">Soul ($8)</option>
+                <option value="9">Inception ($9)</option>
+            </select>
+        </div>
 
-    <ul class="showcase">
-        <li>
-            <div class="seat"></div>
-            <small>N/A</small>
-        </li>
-        <li>
-            <div class="seat selected"></div>
-            <small>Selected</small>
-        </li>
-        <li>
-            <div class="seat occupied"></div>
-            <small>Occupied</small>
-        </li>
-    </ul>
+        <ul class="showcase">
+            <li>
+                <div class="seat"></div>
+                <small>N/A</small>
+            </li>
+            <li>
+                <div class="seat selected"></div>
+                <small>Selected</small>
+            </li>
+            <li>
+                <div class="seat occupied"></div>
+                <small>Occupied</small>
+            </li>
+        </ul>
 
-    <div class="container">
-        <div class="screen"></div>
+        <div class="container">
+            <div class="screen"></div>
 
-        <div class="row">
-            <div class="seat">1</div>
-            <div class="seat">2</div>
-            <div class="seat">3</div>
-            <div class="seat">4</div>
-            <div class="seat">5</div>
-            <div class="seat">6</div>
-            <div class="seat">7</div>
-            <div class="seat">8</div>
+            <div class="row">
+                <div class="row_number">1</div>
+                <div class="seat">1</div>
+                <div class="seat">2</div>
+                <div class="seat">3</div>
+                <div class="seat">4</div>
+                <div class="seat">5</div>
+                <div class="seat">6</div>
+                <div class="seat">7</div>
+                <div class="seat">8</div>
+                <div class="row_number">1</div>
+            </div>
+            <div class="row">
+                <div class="row_number">2</div>
+                <div class="seat">9</div>
+                <div class="seat">10</div>
+                <div class="seat">11</div>
+                <div class="seat occupied">12</div>
+                <div class="seat occupied">13</div>
+                <div class="seat">14</div>
+                <div class="seat">15</div>
+                <div class="seat">16</div>
+                <div class="row_number">2</div>
+            </div>
+            <div class="row">
+                <div class="row_number">3</div>
+                <div class="seat">17</div>
+                <div class="seat">18</div>
+                <div class="seat">19</div>
+                <div class="seat">20</div>
+                <div class="seat">21</div>
+                <div class="seat">22</div>
+                <div class="seat occupied">23</div>
+                <div class="seat occupied">24</div>
+                <div class="row_number">3</div>
+            </div>
+            <div class="row">
+                <div class="row_number">4</div>
+                <div class="seat">25</div>
+                <div class="seat">26</div>
+                <div class="seat">27</div>
+                <div class="seat">28</div>
+                <div class="seat">29</div>
+                <div class="seat">30</div>
+                <div class="seat">31</div>
+                <div class="seat">32</div>
+                <div class="row_number">4</div>
+            </div>
+            <div class="row">
+                <div class="row_number">5</div>
+                <div class="seat">33</div>
+                <div class="seat">34</div>
+                <div class="seat">35</div>
+                <div class="seat occupied">36</div>
+                <div class="seat occupied">37</div>
+                <div class="seat">38</div>
+                <div class="seat">39</div>
+                <div class="seat">40</div>
+                <div class="row_number">5</div>
+            </div>
+            <div class="row">
+                <div class="row_number">6</div>
+                <div class="seat">41</div>
+                <div class="seat">42</div>
+                <div class="seat">43</div>
+                <div class="seat">44</div>
+                <div class="seat occupied">45</div>
+                <div class="seat occupied">46</div>
+                <div class="seat occupied">47</div>
+                <div class="seat">48</div>
+                <div class="row_number">6</div>
+            </div>
         </div>
-        <div class="row">
-            <div class="seat">9</div>
-            <div class="seat">10</div>
-            <div class="seat">11</div>
-            <div class="seat occupied">12</div>
-            <div class="seat occupied">13</div>
-            <div class="seat">14</div>
-            <div class="seat">15</div>
-            <div class="seat">16</div>
-        </div>
-        <div class="row">
-            <div class="seat">17</div>
-            <div class="seat">18</div>
-            <div class="seat">19</div>
-            <div class="seat">20</div>
-            <div class="seat">21</div>
-            <div class="seat">22</div>
-            <div class="seat occupied">23</div>
-            <div class="seat occupied">24</div>
-        </div>
-        <div class="row">
-            <div class="seat">25</div>
-            <div class="seat">26</div>
-            <div class="seat">27</div>
-            <div class="seat">28</div>
-            <div class="seat">29</div>
-            <div class="seat">30</div>
-            <div class="seat">31</div>
-            <div class="seat">32</div>
-        </div>
-        <div class="row">
-            <div class="seat">33</div>
-            <div class="seat">34</div>
-            <div class="seat">35</div>
-            <div class="seat occupied">36</div>
-            <div class="seat occupied">37</div>
-            <div class="seat">38</div>
-            <div class="seat">39</div>
-            <div class="seat">40</div>
-        </div>
-        <div class="row">
-            <div class="seat">41</div>
-            <div class="seat">42</div>
-            <div class="seat">43</div>
-            <div class="seat">44</div>
-            <div class="seat occupied">45</div>
-            <div class="seat occupied">46</div>
-            <div class="seat occupied">47</div>
-            <div class="seat">48</div>
-        </div>
-    </div>
 
-    <p class="text">
-        You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span>
-    </p>
+        <p class="text">
+            You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span>
+        </p>
 
+        <div class="clearBtn" id="clearBtn"><button class="clearLS">Clear your choice</button></div>
+    </main>
     <script src="script.js"></script>
+
 </body>
 
 </html>
