back to published

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Movie Seat Booking</title>
 </head>
 
-<body className="test">
+<body>
     <main>
         <button id="mode" class="mode" title="dark / light mode"><img src="./icon/night-mode.png" alt="switch color"
                 class="mode_img"></button>
@@ -39,13 +39,13 @@
             </li>
         </ul>
 
-        <div class="container" id="cinema">
+        <div class="container">
             <div class="screen"></div>
 
             <div class="row">
                 <div class="row_number">1</div>
-                <div class="seat" id="seat1">1</div>
-                <div class="seat" id="seat2">2</div>
+                <div class="seat">1</div>
+                <div class="seat">2</div>
                 <div class="seat">3</div>
                 <div class="seat">4</div>
                 <div class="seat">5</div>
@@ -122,7 +122,7 @@
 
         <div class="clearBtn" id="clearBtn"><button class="clearLS">Clear your choice</button></div>
     </main>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
